--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <title>Vue Todo</title>
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
     <script src="app.js"></script>
   </head>
 
@@ -22,6 +25,7 @@
           v-for="todo in todos"
           v-bind:todo="todo"
           v-bind:key="todo.id"
+          @click.native="markComplete"
         ></todo-item>
       </ul>
     </div>
